added driver page and updated fetch booking page

--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -101,6 +101,7 @@
                 >
                   <thead>
                     <tr>
+                      <th>Destination</th>
                       <th>Status</th>
                       <th>Count</th>
                     </tr>
@@ -121,10 +122,13 @@
                       <th>Name</th>
                       <th>Mobile No</th>
                       <th>Type</th>
+                      <th>Total People</th>
                       <th>Travel Date</th>
                       <th>Pickup Point</th>
                       <th>Drop off Point</th>
+                      <th>Arrival Time</th>
                       <th>Luggage</th>
+                      <th>Attending Adhyayan</th>
                       <th>Mumukshu Comments</th>
                       <th>Admin Comments</th>
                       <th>Booking Status</th>
