--- a/admin/travel/index.html
+++ b/admin/travel/index.html
@@ -51,6 +51,9 @@
                 <a class="menu-btn" href="fetchUpcomingBookings.html">
                   Fetch Upcoming Bookings
                 </a>
+                <a class="menu-btn" href="fetchBookingsForDriver.html">
+                  Fetch Bookings for Driver
+                </a>
                 <!-- <a class="menu-btn" href="updateBookingStatus.html">
                   Update Booking Status
                 </a>
