minor changes in travel and room

--- a/admin/card/index.html
+++ b/admin/card/index.html
@@ -79,6 +79,12 @@
                 >
                   Add New Card
                 </button>
+                <button
+                  onclick="window.location.href='creditsReport.html'"
+                  class="btn btn-primary"
+                >
+                  Mumukshu Credit Report 
+                </button>
               </div>
             </div>
           </body>
