--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -71,6 +71,7 @@
                     <label><input type="checkbox" name="status" value="checkedout" /> Checked-out</label>
                     <label><input type="checkbox" name="status" value="pending checkin" /> Pending Check-in</label>
                     <label><input type="checkbox" name="status" value="waiting" /> Waiting</label>
+                    <label><input type="checkbox" name="status" value="pending" /> Pending</label>
                     <label><input type="checkbox" name="status" value="cancelled" /> Cancelled By User</label>
                     <label><input type="checkbox" name="status" value="admin cancelled" /> Cancelled By Admin</label>
                   </div>
