--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -119,6 +119,7 @@
                 >
                   <thead>
                     <tr>
+                      <th>Travelling From</th>
                       <th>Name</th>
                       <th>Mobile No</th>
                       <th>Type</th>
