--- a/admin/travel/fetchBookingsForDriver.html
+++ b/admin/travel/fetchBookingsForDriver.html
@@ -8,13 +8,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Travel Bookings details for Driver </title>
+    <title>Travel Bookings Details for Driver</title>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!-- Scripts -->
-         <script src="../../style/js/plugin.js"></script>
+    <script src="../../style/js/plugin.js"></script>
     <script src="../../style/js/bootstrap-datepicker.min.js"></script>
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
@@ -49,32 +49,48 @@
               <h1>Driver Travel Bookings</h1>
             </div>
 
+            <div id="downloadBtnContainer" style="margin-bottom: 20px;"></div>
+
             <div class="form">
               <div id="alert" class="alert" role="alert" style="display:none;"></div>
+
+              <!-- Mumbai to RC -->
+              <h3 id="toRCHeader">Travelling from Mumbai to Research Centre (0)</h3>
               <div class="table-responsive">
-                <table
-                  id="driverBookings"
-                  class="table table-striped table-bordered"
-                >
+                <table class="table table-striped table-bordered">
                   <thead>
                     <tr>
+                      <th>Date of Travel</th>
                       <th>Mumukshu Name</th>
-                      <th>Mobile No</th>
-                      <th>Travelling From</th>
-                      <th>Pickup/Drop Point</th>
-                      <th>Arrival Time</th>
-                      <th>Full Car Booking</th>
-                      <th>Total People</th>
+                      <th>Mobile Number</th>
+                      <th>Pickup Point</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody id="driverToRCBody">
                     <!-- Filled via JS -->
                   </tbody>
                 </table>
-                <div id="downloadBtnContainer"></div>
               </div>
-            </div>
 
+              <!-- RC to Mumbai -->
+              <h3 id="fromRCHeader">Travelling from Research Centre to Mumbai (0)</h3>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>Date of Travel</th>
+                      <th>Mumukshu Name</th>
+                      <th>Mobile Number</th>
+                      <th>Dropoff Point</th>
+                    </tr>
+                  </thead>
+                  <tbody id="rcToDriverBody">
+                    <!-- Filled via JS -->
+                  </tbody>
+                </table>
+              </div>
+
+            </div> <!-- .form -->
           </div>
         </div>
       </div>
