--- a/admin/gate/gateReport.html
+++ b/admin/gate/gateReport.html
@@ -68,10 +68,11 @@
                     <tr>
                       <th>ID</th>
                       <th>Card No</th>
-                      <th>status</th>
-                      <th>updatedBy</th>
+                      <th>Name</th>
+                      <th>Mobile Number</th>
+                      <th>Status</th>
                       <th>createdAt</th>
-                      <th>updatedAt</th>
+                      
                     </tr>
                   </thead>
                   <tbody id="gateRecords"></tbody>
