card page update

--- a/admin/card/createCard.html
+++ b/admin/card/createCard.html
@@ -189,7 +189,8 @@
                         <option value="">Select Type</option>
                         <option value="Family">Family</option>
                         <option value="Friend">Friend</option>
-                        <option value="Official">Official</option>
+                        <option value="Driver">Driver</option>
+                        <option value="VIP">VIP</option>
                       </select>
                     </div>
                   </div>
