--- a/admin/card/updateCard.html
+++ b/admin/card/updateCard.html
@@ -172,6 +172,23 @@
                 </select>
               </div>
 
+              <!-- Add this inside <form id="updateForm">, after Residential Status -->
+<div class="form-group guest-only" style="display: none;">
+  <label for="referenceCardno">Reference Card Number:</label>
+  <input type="text" id="referenceCardno" name="referenceCardno" class="form-control" />
+</div>
+
+<!-- <div class="form-group guest-only" style="display: none;">
+  <label for="guestType">Guest Type:</label>
+  <select id="guestType" name="guestType" class="form-control">
+    <option value="">Select Type</option>
+    <option value="Family">Family</option>
+    <option value="Friend">Friend</option>
+    <option value="Driver">Driver</option>
+                        <option value="VIP">VIP</option>
+                      </select>
+</div>
+ -->
               <div class="form-group form-submit">
                 <button type="submit" class="btn btn-primary">Save</button>
               </div>
