fix role check for maintenance, electrical, housekeeping pages

--- a/admin/maintenance/maintenance.html
+++ b/admin/maintenance/maintenance.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['maintenanceAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['maintenanceAdmin', 'electricalAdmin' , 'housekeepingAdmin' , 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
