--- a/admin/account/creditsReport.html
+++ b/admin/account/creditsReport.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['accountsAdmin', 'superAdmin']);
+  checkRoleAccess(['accountsAdmin', 'superAdmin', 'cardAdmin']);
 </script>
 
 <!DOCTYPE html>
