--- a/admin/utsav/createUtsav.html
+++ b/admin/utsav/createUtsav.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['utsavManagement', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['utsavAdmin', 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
