--- a/admin/account/settlementBreakdown.html
+++ b/admin/account/settlementBreakdown.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['accountsManagement', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['accountsAdmin', 'superAdmin']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
@@ -68,7 +68,7 @@
                     <tr>
                       <th><center>#</center></th>
                       <th><center>Id</center></th>
-                      <th><center>Amount</center></th>
+                      <th><center>Amount Credited</center></th>
                       <th><center>Status</center></th>
                       <th><center>Fees</center></th>
                       <th><center>Tax</center></th>
