--- a/admin/utsav/utsavReport.html
+++ b/admin/utsav/utsavReport.html
@@ -73,6 +73,8 @@ width: 100%;
                     <th>Pending Count</th>
                     <th>Max Count</th>
                     <th>WaitList Count</th>
+                    <th>Self_Cancelled Count</th>
+                    <th>Admin/Cron Cancelled Count</th>
                     <th>Status</th>
                     <th>Action</th>
                   </tr>
