--- a/admin/adhyayan/outstationadhyayanReport.html
+++ b/admin/adhyayan/outstationadhyayanReport.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adhyayan Management</title>
+    <title>Outstation Adhyayan Registration Report</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -43,17 +43,15 @@
         <div class="whitesec">
           <div class="inner-padding">
             <div class="frm-head">
-              <h1>Adhyayan Management</h1>
+              <h1>Outstation Adhyayan Registration Report</h1>
             </div>
 
             <div class="admin-menu">
               <div class="menu-grid">
-                <a class="menu-btn" href="createAdhyayan.html">Add New Adhyayan</a>
-                <a class="menu-btn" href="fetchAllAdhyayan.html">Edit Existing Adhyayan</a>
-                <a class="menu-btn" href="adhyayanReport.html">RC Adhyayan Summary Report</a>
-                <a class="menu-btn" href="outstationadhyayanReport.html">Outstation Adhyayan Summary Report</a>
-                <a class="menu-btn" href="adhyayanStatusUpdate.html">Adhyayan Status Update</a>
-              </div>
+                <a class="menu-btn" href="kolkataAdhyayanReport.html">Kolkata Adhyayan Summary Report</a>
+                <a class="menu-btn" href="rajnandgaonAdhyayanReport.html">Rajnandgaon Adhyayan Summary Report</a>
+                <a class="menu-btn" href="dhuleAdhyayanReport.html">Dhule Adhyayan Summary Report</a>
+                </div>
             </div>
             
           </div>
