--- a/admin/travel/fetchBookingsForDriver.html
+++ b/admin/travel/fetchBookingsForDriver.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['travelAdmin', 'superAdmin']); // allowed roles
+  checkRoleAccess(['travelAdmin', 'superAdmin', 'travelAdminDri']); // allowed roles
 </script>
 
 <!DOCTYPE html>
