--- a/admin/account/voucherCreation.html
+++ b/admin/account/voucherCreation.html
@@ -1,6 +1,6 @@
 <script src="/style/js/roleCheck.js"></script>
 <script>
-  checkRoleAccess(['accountsAdmin', 'superAdmin']); // customize allowed roles per page
+  checkRoleAccess(['accountsAdmin', 'superAdmin', 'accountsAdminPra']); // customize allowed roles per page
 </script>
 
 <!DOCTYPE html>
