--- a/admin/account/voucherCreation.html
+++ b/admin/account/voucherCreation.html
@@ -95,6 +95,8 @@
       <th>Booking ID</th>
       <th>Category</th>
       <th>Quantity</th>
+      <th>Checkin Date</th>
+      <th>Checkout Date</th>
       <th>Amount Paid</th>
       <th>Credits Used</th>
       <th>Status</th>
