--- a/admin/account/pendingTransaction.html
+++ b/admin/account/pendingTransaction.html
@@ -21,6 +21,7 @@
     <script src="../../sessionstorage.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="pendingTransaction.js" defer></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <script src="../../style/js/exportToExcel.js"></script>
 
@@ -51,6 +52,7 @@
             </div>
 
             <div class="form">
+              <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
               <div class="table-responsive">
                 <div class="form-group" style="margin-bottom: 15px;">
   <!-- Filter Section -->
