--- a/admin/account/settlementBreakdown.html
+++ b/admin/account/settlementBreakdown.html
@@ -21,6 +21,7 @@
     <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="settlementBreakdown.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <script src="../../style/js/exportToExcel.js"></script>
     
@@ -50,6 +51,7 @@
             </div>
 
             <div class="form">
+              <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
               <div class="table-responsive">
   
 <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 15px;">
