--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -25,6 +25,7 @@
   <script src="../../style/js/config.js"></script>
   <script src="/sessionstorage.js"></script>
   <script src="adhyayanBookingslist.js"></script>
+  <script src="../../style/js/tableSortFilter.js" defer></script>
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script src="../../style/js/exportToExcel.js"></script>
 
@@ -52,10 +53,12 @@
             <p id="genderCount">Males: 0 | Females: 0</p>
 
 
+            <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
             <div class="table-responsive">
               <table id="waitlistTable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
+                    <th>#</th>
                     <th>Booking ID</th>
                     <th>Guest Name</th>
                     <th>Mobile Number</th>
