--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -22,6 +22,8 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="issuedPlateReport.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+    
     
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -48,12 +50,13 @@
             </div>
 
             <div id="alert" class="alert" role="alert" style="display: none;"></div>
+<input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
 
             <div class="table-responsive">
-              <table class="table table-striped table-bordered">
+              <table id="bookingsTable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th>Sr No</th>
+                    <th>#</th>
                     <th>Date</th>
                     <th>Name</th>
                     <th>Mobile No</th>
