--- a/admin/food/manageBulkFood.html
+++ b/admin/food/manageBulkFood.html
@@ -23,6 +23,8 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="manageBulkFood.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+    
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -111,6 +113,7 @@
               <h2>Manage Guest Food Bookings</h2>
             </div>
 
+            <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
             <div class="table-responsive">
               <table id="bookingsTable" class="table table-striped table-bordered">
                 <thead>
