--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -22,6 +22,7 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="manageFood.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
@@ -109,7 +110,8 @@
             <div class="frm-head">
               <h1>Manage Existing Bookings</h1>
             </div>
-
+<input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+            
             <div class="table-responsive">
               <table id="bookingsTable" class="table table-striped table-bordered">
                 <thead>
