--- a/admin/gate/gateReport.html
+++ b/admin/gate/gateReport.html
@@ -21,7 +21,8 @@
     <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="gateReport.js"></script>
-
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+  
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
 
@@ -62,11 +63,12 @@
             </div>
 
             <div class="form">
-              <div class="table-responsive">
+              <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+            <div class="table-responsive">
                 <table id="gateRecordTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
-                      <th>ID</th>
+                      <th>#</th>
                       <th>Card No</th>
                       <th>Name</th>
                       <th>Mobile Number</th>
