--- a/admin/gate/totalPR.html
+++ b/admin/gate/totalPR.html
@@ -21,7 +21,8 @@
     <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="totalPR.js"></script>
-
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+  
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
   </head>
@@ -48,13 +49,15 @@
             </div>
 
             <div class="form">
-              <div class="table-responsive">
+              <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+            <div class="table-responsive">
                 <table
                   id="prResidentsTable"
                   class="table table-striped table-bordered"
                 >
                   <thead>
                     <tr>
+                      <th>#</th>
                       <th>Card No</th>
                       <th>Issued To</th>
                       <th>Mobile No</th>
