--- a/admin/maintenance/maintenance.html
+++ b/admin/maintenance/maintenance.html
@@ -21,6 +21,8 @@
     <script src="../../sessionstorage.js"></script>
     <script src="../../style/js/config.js"></script>
     <script src="maintenance.js" defer></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -58,11 +60,12 @@
             <div class="frm-head">
               <h1>All Requests</h1>
             </div>
-
+<input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+  
             <div class="form">
-              <div class="table-responsive">
-                <table id="maintenanceTable" class="table table-striped table-bordered">
-                  <thead>
+  <div class="table-responsive">
+    <table id="maintenanceTable" class="table table-striped table-bordered">
+      <thead>
                     <tr>
                       <th>Sr No</th>
                       <th>Requested By</th>
