--- a/admin/room/manageRooms.html
+++ b/admin/room/manageRooms.html
@@ -21,6 +21,7 @@
     <script src="../../style/js/config.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="manageRooms.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
 
     <!-- Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -48,11 +49,12 @@
 
             <div class="form">
               <div id="alert" class="alert" role="alert" style="display: none;"></div>
-
+              <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
               <div class="table-responsive">
                 <table id="reportTable" class="table table-striped table-bordered">
                   <thead>
                     <tr>
+                      <th>#</th>
                       <th>&nbsp;</th>
                       <th>Room No</th>
                       <th>Room Type</th>
