--- a/admin/room/occupancyReport.html
+++ b/admin/room/occupancyReport.html
@@ -22,6 +22,7 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="occupancyReport.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <script src="../../style/js/exportToExcel.js"></script>
 
@@ -49,11 +50,13 @@
             <div class="frm-head">
               <h1>Occupancy Report</h1>
             </div>
+<input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
 
             <div class="table-responsive">
               <table id="occupancyTable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
+                    <th>#</th>
                     <th>Booking ID</th>
                     <th>Guest Name</th> 
                     <th>Mobile No.</th>
