--- a/admin/sudo/index.html
+++ b/admin/sudo/index.html
@@ -21,6 +21,8 @@
     <script src="../../style/js/config.js"></script>
     <script src="../../sessionstorage.js"></script>
     <script src="fetchAllAdmins.js"></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
+    
 
     <!-- Shared Styles -->
     <link rel="stylesheet" href="../../style/css/styles.css" />
@@ -45,7 +47,8 @@
               <h1>Admin Users List</h1>
             </div>
 
-            <div class="table-responsive">
+            <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+<div class="table-responsive">
               <table id="adminTable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
