--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -23,6 +23,7 @@
     <script src="../../style/js/formatDate.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="fetchUpcomingBookings.js" defer></script>
+    <script src="../../style/js/tableSortFilter.js" defer></script>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <script src="../../style/js/exportToExcel.js"></script>
 
@@ -118,13 +119,15 @@
   </div>
 </div>
 
-              <div class="table-responsive">
+<input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
+                            <div class="table-responsive">
                 <table
                   id="upcomingBookings"
                   class="table table-striped table-bordered"
                 >
                   <thead>
   <tr>
+    <th>#</th> 
     <th data-key="date">Travel Date</th>
     <th data-key="issuedto">Mumukshu Name</th>
     <th data-key="type">Type (Regular/Full Car)</th>
