--- a/admin/adhyayan/adhyayanBookingslist.html
+++ b/admin/adhyayan/adhyayanBookingslist.html
@@ -56,25 +56,25 @@
             <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
             <div class="table-responsive">
               <table id="waitlistTable" class="table table-striped table-bordered">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>Booking ID</th>
-                    <th>Guest Name</th>
-                    <th>Mobile Number</th>
-                    <th>Gender</th>
-                    <th>Center</th>
-                    <th>Mumkshu Status</th>
-                    <th>Status</th>
-                    <th>Booked By</th>
-                    <th>Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <!-- Data will be populated dynamically using JavaScript -->
-                </tbody>
-              </table>
-              <div id="downloadBtnContainer"></div>
+  <thead>
+    <tr>
+      <th>Sr</th>
+      <th>Booking ID</th>
+      <th>Name</th>
+      <th>Mobile</th>
+      <th>Gender</th>
+      <th>Center</th>
+      <th>Res Status</th>
+      <th>Status</th>
+      <th>Booked By</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+
+<div id="genderCount" style="margin-top: 10px;"></div>
+<div id="downloadBtnContainer" style="margin-top: 10px;"></div>
             </div>
           </div>
 
