--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -11,6 +11,7 @@
   <script src="../../style/js/clockpicker.js"></script>
   <script src="../../style/js/custom.js"></script>
   <script src="../../style/js/config.js"></script>
+  <script src="../../style/js/formatDate.js"></script>
   <script src="/sessionstorage.js"></script>
   <script src="roomReports.js"></script>
   <script src="../../style/js/tableSortFilter.js" defer></script>
