added allowed food field in adhyayan

--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -91,6 +91,15 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="food">Food Allowed?:</label>
+                  <select id="food" name="food" class="form-control" required>
+                    <option value="">Select Option</option>
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                  </select>
+                </div>
+                
+                <div class="form-group">
                   <label for="comments">Comments:</label>
                   <textarea id="comments" name="comments" rows="4" class="form-control"></textarea>
                 </div>
