--- a/admin/food/manageFood.html
+++ b/admin/food/manageFood.html
@@ -98,7 +98,13 @@
                     <option value="COFFEE">Coffee</option>
                   </select>
                 </div>
-
+                <div class="form-group">
+                  <label for="charge">Do you want to charge Mumukshu?</label>
+                  <select id="charge" name="charge" class="form-control">
+                    <option value="no" selected>No</option>
+                    <option value="yes">Yes</option>
+                  </select>
+                </div>
                 <div class="form-group form-submit">
                   <button type="submit" class="btn btn-primary">Submit</button>
                   &nbsp;
