--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -53,6 +53,7 @@
                 <a class="menu-btn" href="room/index.html">Room Management</a>
                 <a class="menu-btn" href="travel/index.html">Travel Management</a>
                 <a class="menu-btn" href="maintenance/index.html">Maintenance Management</a>
+                <a class="menu-btn" href="avt/index.html">AVT Management</a>
                 <a class="menu-btn" href="utsav/index.html">Utsav Management</a>
               </div>
             </div>
