--- a/admin/adhyayan/createAdhyayan.html
+++ b/admin/adhyayan/createAdhyayan.html
@@ -59,9 +59,9 @@
                   <label for="location">Location:</label>
                   <select id="location" name="location" class="form-control" required>
                     <option value="">Select Location</option>
-                    <option value="Parli Research Centre">Parli Research Centre</option>
-                    <option value="Mokshdham Rajndangaon">Mokshdham Rajndangaon</option>
-                    <option value="Kolkata Centre">Kolkata Centre</option>
+                    <option value="Research Centre">Parli Research Centre</option>
+                    <option value="Rajndangaon">Mokshdham Rajndangaon</option>
+                    <option value="Kolkata">Kolkata Centre</option>
                   </select>
                 </div>
                 
