added name in gate scanning along with code, added last checkin-checkout in gate report, added checkin-checkout history in gate report

--- a/admin/maintenance/maintenance.html
+++ b/admin/maintenance/maintenance.html
@@ -75,6 +75,7 @@
                       <th>Area of Work</th>
                       <th>Work Detail</th>
                       <th>Comments</th>
+                      <th>Closed at</th>
                       <th>Status</th>
                     </tr>
                   </thead>
