added checkin/out via tap in gate

--- a/admin/gate/index.html
+++ b/admin/gate/index.html
@@ -54,6 +54,12 @@
                 <a class="menu-btn" href="gateOut.html">
                   Gate Checkout
                 </a>
+                <a class="menu-btn" href="gateInTap.html">
+                  Gate Checkin via Tap
+                </a>
+                <a class="menu-btn" href="gateOutTap.html">
+                  Gate Checkout via Tap
+                </a>
                 <a class="menu-btn" href="gateReport.html">
                     Gate Checkin/out Report
                 </a>
