minor changes in room and food report

--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -50,6 +50,10 @@
             </div>
 
             <div id="alert" class="alert" role="alert" style="display: none;"></div>
+<div class="frm-head">
+  <h1 id="reportTitle">Issued Food Plate Report</h1>
+  <div id="alertBox" style="display: none; padding: 10px; margin-top: 10px; border-radius: 5px; font-weight: bold;"></div>
+</div>
 <input type="text" id="tableSearch" class="form-control search-box" placeholder="Search...">
 
             <div class="table-responsive">
